# mnist-demo

./: Cargo.toml  Dockerfile
.github/workflows/: build.yaml  test.yaml
evaluation-test/: Cargo.toml
evaluation-test/src/: main.rs
inference-server/: Cargo.toml
inference-server/src/: main.rs
model_storage/1/: config.json  model.mpk
model_storage/1/checkpoint/: model-1.mpk  optim-1.mpk
model_storage/2/: config.json  model.mpk
model_storage/2/checkpoint/: model-2.mpk  model-3.mpk  optim-2.mpk  optim-3.mpk
scripts/: copy-model.sh
training-pipeline/: Cargo.toml
training-pipeline/src/: config.rs  lib.rs  main.rs  model.rs  training.rs
